ready for submission

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -4,8 +4,8 @@ body {
   line-height: 1;
 }
 
-textarea {
-  background: transparent;
+.textarea {
+  background:local;
   border: none;
   resize: none;
   color: #000000;
@@ -61,7 +61,7 @@ textarea {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  background-color: black;
   color: white;
 }
 
